<resources>
    <string name="app_name">T2004E</string>
    <string name="list_contact">List Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="list_song">List Song</string>
    <string name="add_song">add_song</string>
    <string name="about_us">About Us</string>
    <string name="policy">Policy</string>
    <string name="app_slogan">Welcome to android</string>
    <string name="home">Home</string>
    <string name="open_menu">Open Menu</string>
    <string name="close_menu">Close Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="et_birthday">Enter birthday</string>
    <string name="et_avatar">Enter avatar</string>
    <string name="et_email">Enter email</string>
    <string name="et_phone">Enter phone</string>
    <string name="et_address">Enter address</string>
    <string name="et_password">Enter password</string>
    <string name="et_firstname">Enter first name</string>
    <string name="et_lastname">Enter last name</string>
</resources>